# ObjDetection

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  vcpkg.json
.github/workflows/: main.yml
